# guzve.live

./: .gitignore  Dockerfile  README.md  main.py  manage.py  pyproject.toml  requirements.txt  scrape_api.py
.github/workflows/: update.yml
docs/: autoceste.html  drzavne_ceste.html  granicni_prijelazi.html  index.html  mostovi.html  trajekti.html
guzvehr/: asgi.py  settings.py  urls.py  wsgi.py
templates/: autoceste.html  base.html  drzavne_ceste.html  granicni_prijelazi.html  index.html  mostovi.html  trajekti.html
webcams/: admin.py  apps.py  models.py  views.py
webcams/management/commands/: estimate_congestions.py  fetch_webcams.py
webcams/migrations/: 0001_initial.py  0002_congestionestimate.py  0003_congestionestimate_num_vehicles.py
webcams/templates/webcams/: index.html
